sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: ':' expected but ')' found.
def bubbleSort(L)  {
                ^AlgBubbleSort1:19: error: identifier expected but '}' found.
}
^